[package]
name = "milk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["headers"]}
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] } 
rust-argon2 = "1.0"
http = "0.2.8"
http-body = "0.4.5"